--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             height: 70%;
             display: block;
             object-fit: cover;
+            
         }
 
         .logo {
@@ -56,6 +57,7 @@
             background-size: contain;
             background-repeat: no-repeat;
             background-position: center;
+            
         }
 
         .name {
@@ -215,7 +217,7 @@
             <img src="top.png" alt="Imagen de encabezado" class="card-image">
             <div class="logo"></div>
         </div>
-        <div class="name">Enrique Garcia</div>
+        <div class="name">Enrique García</div>
         <div class="title">Owner</div>
         <hr class="linea-60">
         <div class="services">
@@ -223,11 +225,13 @@
                 <p>Signs</p>
                 <p>Embroidery</p>
                 <p>Screen Printing</p>
+                <p>Decals</p>
             </div>
             <div>
                 <p>Flags</p>
                 <p>Banners</p>
                 <p>Direct to Film</p>
+                <p>More</p>
             </div>
         </div>
         <div class="features">
